monitoria/mac323/4-2-33/grades/Isabela-Blucher_190855_assignsubmission_file_WordDAG.java.txt

WR.WWW.WWWWWWWRWRWWWWWWWWW
CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
2 | OK
0 | Erro de Montagem (o grafo dessa query não pode ser montado)
0 | Tempo de Execução Excedido
21 | Resposta Errada
3 | Erro de Execução
Existem 26 testes, se a soma não der 26 quer dizer que houve alguma falha especial em algum teste que não foi identificada pelo corretor

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-33/tester/checker/checker' is up to date.
WordDAG.java:13: error: cannot find symbol
	Digraph G;
	^
  symbol:   class Digraph
  location: class WordDAG
WordDAG.java:44: error: cannot find symbol
		G = new Digraph (strings.length);
		        ^
  symbol:   class Digraph
  location: class WordDAG
2 errors
=========== TENTANDO COMPILAR DE NOVO (LevelTraversal.java -> WordDAG.java) =============
WordDAG.java:13: error: cannot find symbol
	Digraph G;
	^
  symbol:   class Digraph
  location: class WordDAG
WordDAG.java:44: error: cannot find symbol
		G = new Digraph (strings.length);
		        ^
  symbol:   class Digraph
  location: class WordDAG
2 errors
=========== TENTANDO COMPILAR DE NOVO (imports no começo do código) ==============
.R..

real	0m0.280s
user	0m0.344s
sys	0m0.036s
...

real	0m0.227s
user	0m0.308s
sys	0m0.012s
.....

real	0m1.617s
user	0m3.164s
sys	0m0.264s
..R.R...

real	0m31.022s
user	0m59.916s
sys	0m1.364s
......

real	0m4.177s
user	0m4.924s
sys	0m0.280s
====== 000_case =========
wrong answer 1st lines differ - expected: 'cobre cobra', found: '8'
Resposta Errada
====== 001_case =========
Erro de Execução
====== 002_case =========
ok single line: '0'
OK
====== 003_case =========
wrong answer 1st lines differ - expected: '1', found: '0'
Resposta Errada
====== 100_case =========
wrong answer 1st lines differ - expected: 'aa a', found: '6'
Resposta Errada
====== 101_case =========
wrong answer 1st lines differ - expected: '1', found: '0'
Resposta Errada
====== 102_case =========
ok single line: '0'
OK
====== 200_case =========
wrong answer 1st lines differ - expected: 'a A', found: '30'
Resposta Errada
====== 201_case =========
wrong answer 1st lines differ - expected: '1474', found: '0'
Resposta Errada
====== 202_case =========
wrong answer 1st lines differ - expected: '235229', found: '0'
Resposta Errada
====== 203_case =========
wrong answer 1st lines differ - expected: '84', found: '0'
Resposta Errada
====== 204_case =========
wrong answer 1st lines differ - expected: '240', found: '0'
Resposta Errada
====== 300_case =========
wrong answer 1st lines differ - expected: 'a A', found: '60'
Resposta Errada
====== 301_case =========
wrong answer 1st lines differ - expected: '1', found: '0'
Resposta Errada
====== 302_case =========
Erro de Execução
====== 303_case =========
wrong answer 1st lines differ - expected: '1964', found: '0'
Resposta Errada
====== 304_case =========
Erro de Execução
====== 305_case =========
wrong answer 1st lines differ - expected: '1398768', found: '0'
Resposta Errada
====== 306_case =========
wrong answer 1st lines differ - expected: '923340550', found: '0'
Resposta Errada
====== 307_case =========
wrong answer 1st lines differ - expected: '114495854014092500', found: '0'
Resposta Errada
====== 400_case =========
wrong answer 1st lines differ - expected: 'c a', found: '200'
Resposta Errada
====== 401_case =========
wrong answer 1st lines differ - expected: '803469022129495137770981046170581301261101496891396417650688', found: '0'
Resposta Errada
====== 402_case =========
wrong answer 1st lines differ - expected: '340282366920938463463374607431768211456', found: '0'
Resposta Errada
====== 403_case =========
wrong answer 1st lines differ - expected: '452312848583266388373324160190...7600158453279131187530910662656', found: '0'
Resposta Errada
====== 404_case =========
wrong answer 1st lines differ - expected: '706233516069713018417604833508...6082073593257084545458595954688', found: '0'
Resposta Errada
====== 405_case =========
wrong answer 1st lines differ - expected: '216164294552797813644468298334...4074980640712723296570197409792', found: '0'
Resposta Errada
